--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-multipart==0.0.6
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.10
 python-jose[cryptography]==3.3.0
+cryptography<40.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 PyPDF2==3.0.1
