--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,10 @@ openai==1.3.0
 httpx>=0.24.0
 pydantic==2.11.7
 python-docx==1.1.0
+anyio==4.9.0
+certifi==2025.6.15
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+sniffio==1.3.1
